Fix getting token balances

--- a/ArweaveBlazor.SampleApp/Pages/Index.razor
+++ b/ArweaveBlazor.SampleApp/Pages/Index.razor
@@ -4,6 +4,7 @@
 
 <h1>Arweave Blazor SDK Sample dApp</h1>
 
+<button class="btn btn-primary" @onclick="ConnectArweaveApp">Connect Arweave.App</button>
 <button class="btn btn-primary" @onclick="GenerateWallet">Generate New Wallet</button>
 <InputFile OnChange="HandleFileSelected" />
 
