Added option to change gateway urls

--- a/ArweaveBlazor.SampleApp/Pages/Index.razor
+++ b/ArweaveBlazor.SampleApp/Pages/Index.razor
@@ -59,6 +59,11 @@ else
     <button class="btn btn-primary" @onclick="GetResults">Read multiple result</button>
     <br />
 
+    <br />
+    <br />
+    <button class="btn btn-primary" @onclick="SetConnection">Change URLs</button>
+    <br />
+
 }
 
 
