--- a/ArweaveBlazor.SampleApp/Pages/Index.razor
+++ b/ArweaveBlazor.SampleApp/Pages/Index.razor
@@ -46,6 +46,10 @@ else
 
     <br />
     <br />
+    <button class="btn btn-primary" @onclick="StartMonitor">StartMonitor</button>
+
+    <br />
+    <br />
     <button class="btn btn-primary" @onclick="SendDryRun">Send Dry Run</button>
 
     <br />
