--- a/ArweaveBlazor.SampleApp/Pages/Index.razor
+++ b/ArweaveBlazor.SampleApp/Pages/Index.razor
@@ -64,6 +64,11 @@ else
     <button class="btn btn-primary" @onclick="SetConnection">Change URLs</button>
     <br />
 
+    <br />
+    <br />
+    <button class="btn btn-primary" @onclick="CreateProcess">CreateProcess</button>
+    <br />
+
 }
 
 
